# libCEX

./: CMakeLists.txt  LICENSE  README.md
include/libCEX/: CEX_string.h  CEX_vector.h
src/: CEX_string.c  CEX_vector.c
